iphone 5 overspill fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,7 @@ ul {
 
 .inputBox {
 	margin: 8px;
+	width: 90%;
 }
 
 .tncNumStyle {
